--- a/public/index.html
+++ b/public/index.html
@@ -27,9 +27,9 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.css" rel="stylesheet" />
     <title>React App</title>
   </head>
-  <body>
+  <body id="root">
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
+    <div ></div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
